--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   image_picker: ^1.2.1
   carousel_slider: ^5.1.1
   url_launcher: ^6.3.2
+  dio: ^5.9.0
 
   geolocator: ^14.0.2
   geocoding: ^4.0.0
